SplendidCRM-Community/templates/network.json

{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Specifies the location for all resources."
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "SplendidCRM-vnet",
      "metadata": {
        "description": "Specifies the name of the virtual network."
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Specifies the address prefix for the virtual network."
      }
    },
    "webappSubnetName": {
      "type": "string",
      "defaultValue": "webapp",
      "metadata": {
        "description": "Specifies the name of the web application subnet."
      }
    },
    "webappSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "Specifies the address prefix for the web application subnet."
      }
    },
    "nsgName": {
      "type": "string",
      "defaultValue": "SplendidCRM-nsg",
      "metadata": {
        "description": "Specifies the name of the network security group."
      }
    },
    "adminIpAddress": {
      "type": "string",
      "metadata": {
        "description": "Specifies the admin IP address for RDP access."
      }
    }
  },
  "variables": {
    "tags": {
      "Project": "SplendidCRM",
      "Phase": "LiftShift"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('tags')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTP_Inbound",
            "properties": {
              "priority": 100,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationPortRange": "80",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowHTTPS_Inbound",
            "properties": {
              "priority": 110,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationPortRange": "443",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowRDP_Inbound_From_Admin",
            "properties": {
              "priority": 120,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('adminIpAddress')]",
              "destinationPortRange": "3389",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",
      "tags": "[variables('tags')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('webappSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('webappSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
              }
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
    },
    "webappSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('webappSubnetName'))]"
    }
  }
}
